//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package fastnum;

message D128 {
  uint64 lo = 1;
  uint64 hi = 2;
  int32 fractional_digits_count = 3;
  bool is_negative = 4;
}

message UD128 {
  uint64 lo = 1;
  uint64 hi = 2;
  int32 fractional_digits_count = 3;
}

