//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package proto_dump;

message Lamports {
  uint64 amount = 1;
}

